--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.14.1)
-project(glibex)
+
+project(glib VERSION 0.0.0 DESCRIPTION "glib archive tools")
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(lib)
+add_subdirectory(test)
 add_subdirectory(src)
