--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_executable(glibex main.cxx)
+add_executable(glib_bin main.cxx)
+
+target_link_libraries(glib_bin glib_static)
+
+target_include_directories(glib_bin PUBLIC ${CMAKE_SOURCE_DIR}/lib)
