Split glib into backend and frontend

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,12 @@
 add_executable(
     glib_test
     main.cxx
-    glib.test.cxx
+    glib_file_validator.test.cxx
 )
 
 find_package(Catch2 REQUIRED)
 
-target_link_libraries(glib_test Catch2::Catch2)
+target_link_libraries(glib_test Catch2::Catch2 glib_static)
 target_include_directories(glib_test PUBLIC ${CMAKE_SOURCE_DIR}/lib)
 
 include(CTest)
