--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(glib_static STATIC glib.hxx exceptions.hxx)
+add_library(glib_static STATIC
+    glib.cxx
+    glib_file.cxx
+    glib_file_validator.cxx
+    exceptions.hxx
+)
 
 set_target_properties(glib_static PROPERTIES LINKER_LANGUAGE CXX)
 
