--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(glib_bin main.cxx)
+add_executable(glib_bin main.cxx ../lib/glib.cxx ../lib/glib.hxx)
 
 target_link_libraries(glib_bin glib_static)
 
