--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,8 +3,11 @@ add_library(glib_static STATIC
     glib_defs.hxx
     glib_file.cxx
     glib_file_validator.cxx
+    glib_version.hxx
     exceptions.hxx
 )
+
+target_include_directories(glib_static PUBLIC "${PROJECT_BINARY_DIR}")
 
 set_target_properties(glib_static PROPERTIES LINKER_LANGUAGE CXX)
 
