Clean up argument and frontend exception handling

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_library(glib_static STATIC
     glib.cxx
     glib_defs.hxx
+    glib_exception.hxx
     glib_file.cxx
     glib_file_validator.cxx
     glib_version.hxx
-    exceptions.hxx
 )
 
 target_include_directories(glib_static PUBLIC "${PROJECT_BINARY_DIR}")
