Test extraction and creation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(
     glib_test
     arg_provider.test.cxx
+    glib.test.cxx
     glib_file.test.cxx
     glib_file_validator.test.cxx
     main.cxx
